# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gendiff/: __init__.py  engine.py  generator.py  test_gendiff.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
tests/: test_gendiff.py
